# MedGen

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  api.http  backend.py  docker-compose.yml  generate_data.py  main.py  pyproject.toml  rag.py  requirements.txt  run.bat  run.sh
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Acknowledgements.js  Analysis.js  DataExplorer.js  DataGeneration.js  Database.js  DatasetManager.js  Home.js  QueryInterface.js  Sidebar.js
frontend/src/services/: api.js
